# template-api

./: Makefile
app/: .env  Dockerfile  compose.yml  main.py  pyproject.toml
app/carts/: dependencies.py  models.py  views.py
app/carts/domain/: app.py  models.py  repositories.py
app/carts/domain/command/: create_cart.py  delete_cart.py  update_cart.py
app/carts/domain/query/: get_all_carts.py  get_cart_by_uuid.py
integration_tests/: .env  Dockerfile  compose.yml  main.py
